--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
     <meta charset="utf-8" />
 
     <title>My Resume</title>
-    <style type="text/css">
-   </style>
-    <link rel="stylesheet" href="css/index.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
-      rel="stylesheet"
-    />
+    <style type="text/css"></style>
     <meta content="A brief resume." name="description">
     <link href="images/ramen.ico" rel="shortcut icon">
+    <link rel="stylesheet" href="css/index.css" />
+    <!--Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet"/>
+
     <script src="https://kit.fontawesome.com/ae80cd04d2.js" crossorigin="anonymous"></script>
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
